--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGODB_URI=mongodb+srv://aadityarathod7_db_user:y4Mb9OKdUZmICttV@memora.jozseud.mongodb.net/?appName=Memora
+MONGODB_URI=mongodb+srv://aad7tya_db_user:Lou5vmIk6FC4nQ3p@cluster0.6i1sagj.mongodb.net/?appName=Cluster0
 JWT_SECRET=dfnkjsdnfjksndfjndfkjsdhfjkdsdsfdsf
 GEMINI_API_KEY=AIzaSyBSEB_PUhl60kzpSokrSz7oVuiMV8RmRyw
 
