--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0",
+    "react-simple-pull-to-refresh": "^1.3.4",
+    "react-swipeable": "^7.0.2",
     "recharts": "^3.7.0"
   },
   "devDependencies": {
