--- a/server/package.json
+++ b/server/package.json
@@ -9,14 +9,22 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "archiver": "^7.0.1",
+    "axios": "^1.13.5",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
+    "googleapis": "^171.4.0",
     "jsonwebtoken": "^9.0.2",
+    "markdown-it": "^14.1.1",
     "mongodb": "^7.1.0",
     "mongoose": "^8.0.3",
-    "openai": "^4.77.0"
+    "node-cron": "^4.2.1",
+    "nodemailer": "^8.0.1",
+    "openai": "^4.77.0",
+    "pdfkit": "^0.17.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
