added email verification

--- a/server/.env
+++ b/server/.env
@@ -12,4 +12,5 @@ EMAIL_PASSWORD=ldgz bkxp otye wene
 
 # Application URL (for email links)
 APP_URL=http://localhost:3000
+CLIENT_URL=http://localhost:3000
 
